--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="toast_padding_left_right">16dp</dimen>
 
     <dimen name="text_size_l">15sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
